	* src/RelLib/Makefile.am: Ship new files;
	* src/RelLib/ various files: add more files.

	* src/GrampsBSDDB.py (gramps_upgrade_9): Upgrade witness list in
	the old Event object.
	* src/RelLib/_Event.py: Remove external witnesses altogether.
	* src/RelLib/_Witness.py: Make even emptier (needed for upgrade only).
	* src/RelLib/__init__.py: Expose Witness (needed for upgrade only).

2005-12-20 Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/RelLib/_helper.py: removed get_backlink_handles
	* test/RelLib_Test.py: removed test for get_backlink_handles

2005-12-19  Don Allingham  <don@gramps-project.org>
	* src/ReadXML.py: handle _NAME_TRANS keyerror exception

2005-12-19  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsBSDDB.py (gramps_upgrade_9): Convert all Name and
	Attribute objects to use tuple types.
	* src/RelLib.py (Name.set_type): Typo in the wrapper code.

	* src/RelLib.py: Add privacy flag to all objects via making
	PrimaryObject inherit from PrivacyBase; Add AddressBase and
	UrlBase classes to manage Address and Url lists in other objects; 
	Add tuple type to the Url class; make Repository inherit from
	AddressBase and UrlBase to be able to store lists of both.
	* src/GrampsBSDDB.py (gramps_upgrade_9): Provide upgrade for the
	changes in RelLib.

	* src/RelLib.py: Remove file (replaced by the package dir).
	* src/RelLib: Add directory.
	* src/RelLib/__init__.py, src/RelLib/_helper.py,
	src/RelLib/_secondary.py, src/RelLib/Researcher.py,
	src/RelLib/GenderStats.py, src/RelLib/Person.py,
	src/RelLib/Family.py, src/RelLib/Event.py, src/RelLib/Place.py,
	src/RelLib/Source.py, src/RelLib/MediaObject.py,
	src/RelLib/Repository.py, src/RelLib/Makefile.am,
	src/RelLib/.cvsignore: Add to CVS.
	* src/configure.in: Create Makefile in src/RelLib.

2005-12-19 Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/RelLib.py: added get_backlink_handles method to PrimaryObject
        * test/GrampsDbBase_Test.py: factored out common db test methods